--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,213 @@
-.App {
+.a-tag{
+  text-decoration: none;
+  color: #000;
+}
+.container{
+  max-width: 1280px !important;
+  margin: 0 auto;
+  padding: 0px;
+}
+
+.search-icon::before{
+  transform: rotateY(180deg);
+  padding: 0px 18px ;
+}
+
+.search-span{
+  background-color: #f0f0f1;
+ 
+  width: 75%;
+  border-radius: 6px;
+  height: 40px;
+
+  display: flex;
+  align-items: center;
+}
+.login-icon{
+  font-size: 25px;
+  font-weight: 700;
+}
+.shop-icon::before{
+  transform: rotateY(180deg);
+  font-size: 30px;
+  padding-left: 30px;
+  border-left: 1px solid;
+}
+.tasvir{
+  max-width: 100%;
+  height: auto;
+}
+.smallinfo{
+  width: 50px;
+  height: 50px;
+}
+.smallinfo-p{
+  font-size: 12px;
+  font-weight: 800;
+  margin-top: 6px;
+  color: gray;
   text-align: center;
 }
+.market{
+  height: 100px;
+  width: 100%;
+  background: url('https://www.digikala.com/statics/img/svg/typography/freshPattern.svg') left center no-repeat;
+  /* background-image: url('https://www.digikala.com/statics/img/svg/typography/freshPattern.svg'); */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
+.market-discount{
+  text-align: center;
+  font-weight: 700;
+  width: 75%;
+  color:#fff;
+  margin: 0px;
+  background-color: #39ae00;
+  border-radius: 15px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  
 }
+.market-span{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
+  position: absolute;
+  background-color: #ef394e;
+  color: #fff;
+  border-radius: 20px;
+  font-size: 10px;
+  font-weight: 700;
+  width: 80%;
+  text-align: center;
+  margin-top: -16px;
+  /* margin-right: -5px; */
+}
+.market-span2{
+  width: 80%;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: #39ae00;
+  background-color: #fff;
+  font-size: 15px;
+  font-weight: 700;
+}
+.infomore-image{
+  width: 300px;
+  border-radius: 10px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.group-image{
+  width: 155px;
+  height: 155px;
+  border-radius: 20%;
+}
+.group-p{
+  font-size: 13px;
+  font-weight: 700;
+  color: #000;
+}
+.group-a{
+  text-decoration: none;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.infomoree-image{
+  width: 100%;
+  height: 245px;
+  border-radius: 15px;
+}
+.slick-arrow{
+  background-color: #000;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* margin-right: 50px; */
+}
+.slick-prev{
+  background-color: #000;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-left: 50px; */
 }
 
-.App-link {
-  color: #61dafb;
+.footer-li{
+  color: #81858b;
+  margin: 10px 0px;
+  font-size: 15px;
+  font-weight: 600;
+}
+.footer-icon{
+  font-size: 28px;
+  color: #81858b;
+}
+.footer-th{
+  text-align: center;
+  padding: 22px;
+  border: 1px dotted #c0c2c5;
+
+}
+.footerend-image{
+  width: 70%;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-menu-li{
+  margin: 0px 9px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #a1a3a8;
+  border-bottom: 0px;
+  transition: all 1s linear;
+    -webkit-transition: all .7s linear;
+    -moz-transition: all .7s linear;
+    -ms-transition: all .7s linear;
+    -o-transition: all .7s linear;
+
+  
+}
+.main-menu-hover a{
+  border-bottom: 0px;
+  transform: scaleX(0); 
+  transition: transform 3s ease-out;
+  -webkit-transition: all .7s linear;
+  -moz-transition: all .7s linear;
+  -ms-transition: all .7s linear;
+  -o-transition: all .7s linear;
+}
+.main-menu-hover a:hover{
+  border-bottom: 1px solid red;
+ 
+  transform-origin:  0% 50%;
+
+
+}
+.a-hover{
+  padding-bottom: 8px;
+}
+.main-menu-case-li{
+  height: 48px;
+  display: flex; 
+  align-items: center;
+  color: #a1a3a8;
+  /* margin: 20px 0px; */
+}
+.main-menu-case-li:hover{
+  background-color: #e0e0e2;
+  color: #ef394e;
+}
+.a-show:hover> ul{
+  visibility: visible !important;
+  opacity: 1 !important;
+}  
+.sub-menu-hover:hover{
+  color: red;
+}
+.sub-menu-span:hover > span{
+  color: red !important;
 }
